# agentmux

./: .bump.json  .gitignore  AGENT_INSPECTION_REPORT.md  BACKEND_COMPARISON.md  BENCHMARK_BUILD_NOTES.md  BENCHMARK_REPORT.md  BENCHMARK_RESULTS_FINAL.md  BORDER_FIX_ANALYSIS.md  BUILD.md  BUILD_INVESTIGATION_SPEC.md  CLAUDE.md  CLAUDE_CODE_WRAPPER_SPEC.md  CODE_OF_CONDUCT.md  COMPILATION_OPTIMIZATION.md  COMPILATION_WARNINGS_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEVTOOLS_INVESTIGATION.md  DEVTOOLS_TROUBLESHOOTING.md  ELECTRON_BUILDER_BUG.md  FORK.md  GREY_SCREEN_FIX.md  LEGAL.md  LICENSE  LIGHTWEIGHT_REFACTOR_PLAN.md  NEXT-STEPS.md  PANE_TITLE_LABELS_FEATURE_SPEC.md  PR_DETAILS.md  README.md  REBRAND_SPEC.md  RELEASES.md  RELEASE_NOTES_v0.12.11.md  REPORT-command-line-inc-audit.md  RETRO-v0.27.13-multi-instance-fix.md  SPEC_AGENTMUX_INTEGRATION.md  SPEC_BUILD_RELIABILITY.md  SPEC_COMPREHENSIVE_CRASH_REPORTING.md  SPEC_CRASH_HANDLER_MODAL.md  SPEC_INSTANCE_INDICATOR.md  SPEC_PANE_CYCLE_FOCUS.md  (+37 more)
.cargo/: config.toml
.github/: PR_MERGE_UPSTREAM_V0.12.0.md  PR_UPSTREAM_MERGE_SPECS.md  RELEASE_v0.12.0_FORK.md  dependabot.yml
agentmux-cef/: Cargo.toml  build.rs
agentmux-cef/src/: app.rs  client.rs  events.rs  ipc.rs  main.rs  sidecar.rs  state.rs  ui_tasks.rs
agentmux-cef/src/commands/: backend.rs  clipboard.rs  drag.rs  mod.rs  platform.rs  providers.rs  stubs.rs  window.rs
agentmux-launcher/: Cargo.toml  build.rs
agentmux-launcher/src/: main.rs
agentmux-srv/: Cargo.toml  forge-seed.json
agentmux-wsh/: Cargo.toml
agentmuxsrv-rs/: BENCHMARK_REPORT.md  Cargo.toml  bench.sh  forge-seed.json
agentmuxsrv-rs/src/: config.rs  crash_monitor.rs  main.rs  server.rs  server_addr.rs
agentmuxsrv-rs/src/backend/: authkey.rs  blocklogger.rs  colprint.rs  config_watcher_fs.rs  cssparser.rs  daystr.rs  dbutil.rs  docsite.rs  ds.rs  envutil.rs  eventbus.rs  faviconcache.rs  fileutil.rs  forge_seed.rs  ijson.rs  iochan.rs  lan_discovery.rs  logview.rs  messagebus.rs  migrateutil.rs  mod.rs  oref.rs  packetparser.rs  pamparse.rs  panichandler.rs  reactive.rs  readutil.rs  rpc_types.rs  schema.rs  service.rs  shellexec.rs  shellintegration.rs  shellutil.rs  sigutil.rs  subagent_watcher.rs  syncbuf.rs  sysinfo.rs  tarcopy.rs  trimquotes.rs  userinput.rs  (+11 more)
agentmuxsrv-rs/src/backend/ai/: anthropic.rs  chatstore.rs  mod.rs  openai.rs  tools.rs
agentmuxsrv-rs/src/backend/blockcontroller/: health.rs  mod.rs  pidregistry.rs  process_tree.rs  shell.rs  subprocess.rs
agentmuxsrv-rs/src/backend/history/: adapter.rs  claude_adapter.rs  index.rs  mod.rs
agentmuxsrv-rs/src/backend/reactive/: handler.rs  mod.rs  poller.rs  registry.rs  sanitize.rs  tests.rs  types.rs
agentmuxsrv-rs/src/backend/remote/: conncontroller.rs  connparse.rs  genconn.rs  mod.rs  sshclient.rs
agentmuxsrv-rs/src/backend/rpc/: engine.rs  router.rs
agentmuxsrv-rs/src/backend/shellintegration/: bash.sh  fish.fish  pwsh.ps1  zsh.sh
agentmuxsrv-rs/src/backend/storage/: error.rs  filestore.rs  migrations.rs  mod.rs  wstore.rs
agentmuxsrv-rs/src/backend/storage/filestore/: cache.rs  core.rs  ijson.rs  mod.rs  offset_ops.rs  tests.rs  types.rs
agentmuxsrv-rs/src/backend/utilfn/: hash.rs  mod.rs  nullenc.rs  strutil.rs  tests.rs
agentmuxsrv-rs/src/backend/wconfig/: loader.rs  mod.rs  types.rs  watcher.rs
agentmuxsrv-rs/src/backend/wcore/: block.rs  dnd.rs  event.rs  mod.rs  window.rs  workspace.rs
agentmuxsrv-rs/src/backend/wshutil/: cmdreader.rs  event.rs  mod.rs  osc.rs  proxy.rs  rpcio.rs  wshrpc.rs
agentmuxsrv-rs/src/config/: widgets.json
agentmuxsrv-rs/src/server/: messagebus.rs  mod.rs  reactive.rs  service.rs  tests.rs  websocket.rs
agentmuxsrv-rs/tests/: integration_test.rs
backend-test/: Cargo.toml
docs-internal/: SPEC_STATUS_BAR.md  (+3 more)
src-tauri/: .gitignore  AppxManifest.xml  Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh  installer.nsi
src-tauri/src/: crash.rs  db.rs  drag.rs  heartbeat.rs  lib.rs  main.rs  menu.rs  rust_backend.rs  sidecar.rs  state.rs  tray.rs  updater.rs
src-tauri/src/backend/: authkey.rs  colprint.rs  docsite.rs  ds.rs  envutil.rs  eventbus.rs  filestream.rs  fileutil.rs  ijson.rs  iochan.rs  logging.rs  mod.rs  oref.rs  reactive.rs  rpc_types.rs  schema.rs  shellexec.rs  suggestion.rs  tarcopy.rs  telemetry.rs  trimquotes.rs  wavebase.rs  wavefileutil.rs  waveobj.rs  wcloud.rs  wconfig.rs  wcore.rs  webhookdelivery.rs  wsh_server.rs  wslconn.rs
src-tauri/src/backend/ai/: adapters.rs  agent.rs  anthropic.rs  chatstore.rs  mod.rs  process.rs  unified.rs
src-tauri/src/backend/blockcontroller/: mod.rs  shell.rs
src-tauri/src/backend/defaultconfig/: settings.json
src-tauri/src/backend/remote/: connparse.rs  genconn.rs  mod.rs  sshclient.rs
src-tauri/src/backend/rpc/: engine.rs  mod.rs  router.rs
src-tauri/src/backend/storage/: filestore.rs  migrations.rs
src-tauri/src/backend/wshutil/: event.rs  mod.rs  osc.rs
src-tauri/src/commands/: agent.rs  auth.rs  backend.rs  claudecode.rs  cli_installer.rs  contextmenu.rs  devtools.rs  drag.rs  file_ops.rs  mod.rs  platform.rs  providers.rs  rpc.rs  stubs.rs  tab.rs  updater.rs  window.rs  workspace.rs
src-tauri/src/commands/rpc/: block.rs  config.rs  events.rs  file.rs  mod.rs  object.rs  reactive.rs  schema.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/entities/: mod.rs  waveobj.rs
src-tauri/src/domain/events/: mod.rs
src-tauri/src/domain/traits/: mod.rs  repository.rs
src-tauri/src/domain/value_objects/: geometry.rs  ids.rs  meta.rs  mod.rs
src-tauri/src/infrastructure/: file_storage.rs  mod.rs  storage.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/services/: mod.rs  object_service.rs  tab_service.rs  workspace_service.rs
src-tauri/src/sidecar/: binary.rs  event_loop.rs
wsh-rs/: Cargo.toml
wsh-rs/src/: main.rs
wsh-rs/src/cli/: blocks.rs  conn.rs  file.rs  info.rs  meta.rs  mod.rs  term.rs  vars.rs  view.rs
wsh-rs/src/rpc/: mod.rs
(+1179 files in other folders)
