[package]
name = "agentmuxsrv-rs"
version = "0.32.1"
edition = "2021"
description = "AgentMux Rust backend (drop-in replacement for Go agentmuxsrv)"

[[bin]]
name = "agentmuxsrv-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json_comments = "0.2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tokio-util = { version = "0.7" }
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
subtle = "2"
thiserror = "1"
dirs = "5"
libc = "0.2"
whoami = "1"
async-stream = "0.3"
portable-pty = "0.9"
sysinfo = "0.34"
parking_lot = "0.12"
notify = "7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
libc = "0.2"
