[package]
name = "backend-test"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
base64 = "0.22"
chrono = "0.4"
dirs = "6"
libc = "0.2"
whoami = "1"
subtle = "2"
