[package]
name = "agentmux"
version = "0.31.118"
description = "AgentMux - AI-Native Terminal"
authors = ["AgentMux Corp"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "agentmux_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.10", features = ["tray-icon", "devtools", "macos-private-api"] }
tauri-plugin-shell = "=2.3"
tauri-plugin-notification = "=2.3"
tauri-plugin-clipboard-manager = "=2.3"
tauri-plugin-fs = "=2.4"
tauri-plugin-opener = "=2.5"
tauri-plugin-process = "=2.3"
tauri-plugin-store = "=2.4"
tauri-plugin-window-state = "=2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
whoami = "1"
chrono = "0.4"
url = "2"
dirs = "5"
window-vibrancy = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
glib = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_40"] }
