[package]
name = "wsh-rs"
version = "0.31.93"
edition = "2021"
description = "Shell integration CLI for AgentMux"

[[bin]]
name = "wsh"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "sync", "macros"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
dirs = "5"
url = "2"
